--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "contentful": "^9.1.10",
-    "cookie-cutter": "^0.2.0",
+    "js-cookie": "^3.0.1",
     "next": "12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
