--- a/package.json
+++ b/package.json
@@ -2,21 +2,32 @@
   "name": "agrofin-nextjs",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 8080",
+    "dev": "next dev -p 3000",
     "build": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "contentful": "^9.1.10",
+    "fs": "^0.0.1-security",
     "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "mysql": "^2.18.1",
+    "net": "^1.0.2",
     "next": "12.0.8",
+    "next-auth": "^4.3.1",
+    "prisma": "^3.11.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-yandex-maps": "^4.6.0",
-    "sass": "^1.49.0"
+    "sass": "^1.49.0",
+    "serverless-mysql": "^1.5.4",
+    "swr": "^1.2.2",
+    "tls": "^0.0.1"
   },
   "devDependencies": {
+    "@prisma/client": "^3.11.0",
     "@types/node": "17.0.10",
     "@types/react": "17.0.38",
     "eslint": "8.7.0",
