--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.1.3",
     "contentful": "^9.1.10",
+    "formidable": "^2.0.1",
     "fs": "^0.0.1-security",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
+    "multiparty": "^4.2.3",
     "mysql": "^2.18.1",
     "net": "^1.0.2",
     "next": "12.0.8",
     "next-auth": "^4.3.1",
+    "next-connect": "^0.12.2",
     "prisma": "^3.11.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -28,6 +32,8 @@
   },
   "devDependencies": {
     "@prisma/client": "^3.11.0",
+    "@types/formidable": "^2.0.4",
+    "@types/multiparty": "^0.0.33",
     "@types/node": "17.0.10",
     "@types/react": "17.0.38",
     "eslint": "8.7.0",
