--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next-connect": "^0.12.2",
     "prisma": "^3.11.0",
     "react": "17.0.2",
+    "react-bootstrap": "^2.3.0",
     "react-dom": "17.0.2",
     "react-yandex-maps": "^4.6.0",
     "sass": "^1.49.0",
