--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.1.3",
     "contentful": "^9.1.10",
@@ -19,9 +20,7 @@
     "mysql": "^2.18.1",
     "net": "^1.0.2",
     "next": "12.0.8",
-    "next-auth": "^4.3.1",
     "next-connect": "^0.12.2",
-    "prisma": "^3.11.0",
     "react": "17.0.2",
     "react-bootstrap": "^2.3.0",
     "react-dom": "17.0.2",
@@ -34,6 +33,7 @@
   "devDependencies": {
     "@prisma/client": "^3.11.0",
     "@types/formidable": "^2.0.4",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/multiparty": "^0.0.33",
     "@types/node": "17.0.10",
     "@types/react": "17.0.38",
