--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 3000",
-    "build": "next build && next export",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/multer": "^1.4.7",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.1.3",
     "contentful": "^9.1.10",
@@ -16,6 +17,7 @@
     "fs": "^0.0.1-security",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.4",
     "multiparty": "^4.2.3",
     "mysql": "^2.18.1",
     "net": "^1.0.2",
@@ -31,7 +33,6 @@
     "tls": "^0.0.1"
   },
   "devDependencies": {
-    "@prisma/client": "^3.11.0",
     "@types/formidable": "^2.0.4",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/multiparty": "^0.0.33",
