--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "fs": "^0.0.1-security",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
+    "mime-types": "^2.1.35",
     "multer": "^1.4.4",
     "multiparty": "^4.2.3",
     "mysql": "^2.18.1",
