--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^1.0.0-beta.10",
     "@types/bcryptjs": "^2.4.2",
     "@types/multer": "^1.4.7",
     "bcryptjs": "^2.4.3",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^5.2.2",
     "contentful": "^9.1.10",
     "formidable": "^2.0.1",
     "fs": "^0.0.1-security",
@@ -25,7 +26,7 @@
     "next": "12.0.8",
     "next-connect": "^0.12.2",
     "react": "17.0.2",
-    "react-bootstrap": "^2.3.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "17.0.2",
     "react-yandex-maps": "^4.6.0",
     "sass": "^1.49.0",
