--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@animated-burgers/burger-squeeze": "^1.1.2",
     "@nextui-org/react": "^1.0.0-beta.10",
     "@types/bcryptjs": "^2.4.2",
     "@types/multer": "^1.4.7",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.2.2",
+    "classnames": "^2.3.2",
     "contentful": "^9.1.10",
     "formidable": "^2.0.1",
     "js-cookie": "^3.0.1",
