--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   },
   "dependencies": {
     "@animated-burgers/burger-squeeze": "^1.1.2",
-    "@nextui-org/react": "^1.0.0-beta.10",
     "@types/bcryptjs": "^2.4.2",
     "@types/multer": "^1.4.7",
     "bcryptjs": "^2.4.3",
@@ -24,11 +23,11 @@
     "multiparty": "^4.2.3",
     "mysql": "^2.18.1",
     "net": "^1.0.2",
-    "next": "12.0.8",
+    "next": "^13.5.6",
     "next-connect": "^0.12.2",
-    "react": "17.0.2",
-    "react-bootstrap": "^2.5.0",
-    "react-dom": "17.0.2",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
+    "react-dom": "^18.2.0",
     "react-yandex-maps": "^4.6.0",
     "sass": "^1.49.0",
     "serverless-mysql": "^1.5.4",
@@ -42,7 +41,6 @@
     "@types/node": "17.0.10",
     "@types/react": "17.0.38",
     "eslint": "8.7.0",
-    "eslint-config-next": "12.0.8",
     "typescript": "4.5.4"
   }
 }
